--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,23 +10,27 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
+    env:
+      FROM_EMAIL: ${{ secrets.FROM_EMAIL }}
+
     steps:
       - uses: actions/checkout@v3
 
       - name: Use Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '20'
+          node-version: '18'
 
       - name: Install dependencies
         run: npm ci
 
       - name: Build
-        run: npm run build
-
-      - name: Build
-        run: npm run lint
+        run: npm run build && npm run lint
+        env:
+          FROM_EMAIL: fake@example.com
 
     # Optionally, add a test step if you have tests
     # - name: Run tests
     #   run: npm test
+    #   env:
+    #     FROM_EMAIL: ${{ secrets.FROM_EMAIL }}
