--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - main
     paths:
-      - "yiqi-client/package.json"
+      - 'yiqi-client/package.json'
   workflow_dispatch:
 
 jobs:
@@ -35,9 +35,9 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: "20"
-          registry-url: "https://npm.pkg.github.com"
-          scope: "@Andino-Labs"
+          node-version: '20'
+          registry-url: 'https://npm.pkg.github.com'
+          scope: '@Andino-Labs'
 
       - name: Install dependencies
         run: npm ci
