--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "mercadopago": "^2.0.15",
     "next": "14.2.15",
     "prettier": "^3.3.3",
+    "qrcode.react": "^4.1.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
