--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "canvas": "^2.11.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "csv-parse": "^5.5.6",
     "date-fns": "^4.1.0",
     "framer-motion": "^11.11.8",
     "lucia": "^3.2.1",
