--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@trpc/react-query": "^11.0.0-rc.569",
     "@trpc/server": "^11.0.0-rc.569",
     "@types/mailparser": "^3.4.5",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "andino-web": "file:",
     "arctic": "^1.9.2",
     "axios": "^1.7.7",
@@ -67,7 +68,10 @@
     "react-markdown": "^9.0.1",
     "react-resizable-panels": "^2.1.4",
     "react-slick": "^0.30.2",
+    "react-syntax-highlighter": "^15.6.1",
     "react-wrap-balancer": "^1.1.1",
+    "rehype-raw": "^7.0.0",
+    "remark-gfm": "^4.0.0",
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.5.3",
     "tailwindcss-animate": "^1.0.7",
