--- a/package.json
+++ b/package.json
@@ -39,11 +39,11 @@
     "@sendgrid/client": "^8.1.3",
     "@sendgrid/mail": "^8.1.3",
     "@tailwindcss/typography": "^0.5.15",
-    "@tanstack/react-query": "^5.59.11",
-    "@trpc/client": "^11.0.0-rc.569",
-    "@trpc/next": "^11.0.0-rc.569",
-    "@trpc/react-query": "^11.0.0-rc.569",
-    "@trpc/server": "^11.0.0-rc.569",
+    "@tanstack/react-query": "^4.0.0",
+    "@trpc/client": "^10.0.0",
+    "@trpc/next": "^10.0.0",
+    "@trpc/react-query": "^10.0.0",
+    "@trpc/server": "^10.0.0",
     "@types/mailparser": "^3.4.5",
     "@types/react-syntax-highlighter": "^15.5.13",
     "andino-web": "file:",
