--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@radix-ui/react-scroll-area": "^1.2.0",
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-switch": "^1.1.1",
     "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.2",
     "@react-email/components": "0.0.25",
@@ -78,7 +79,8 @@
     "tailwind-merge": "^2.5.3",
     "tailwindcss-animate": "^1.0.7",
     "tsup": "^8.3.0",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "@vis.gl/react-google-maps": "^1.1.0"
   },
   "devDependencies": {
     "@types/node": "^20",
