adjustments to build so it works

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev",
     "dev-email": "email dev",
     "build": "prisma generate && next build && npm run build:client-types",
+    "vercel-build": "prisma generate && prisma migrate deploy && next build",
     "start": "next start",
     "lint": "tsc --noEmit && next lint && npm run format",
     "migrate": "npm run generate && prisma migrate dev",
