--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "generate": "prisma generate",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "build:client-types": "tsup --config yiqi-client/tsup.config.ts",
-    "run-crons": "chmod +x run-crons.sh && ./run-crons.sh"
+    "run-crons": "chmod +x run-crons.sh && ./run-crons.sh",
+    "prepare": "husky"
   },
   "dependencies": {
     "@algora/xtrpc": "^0.1.1",
@@ -95,6 +96,7 @@
     "dts-bundle-generator": "^8.1.2",
     "eslint": "^8",
     "eslint-config-next": "14.2.15",
+    "husky": "^9.1.6",
     "postcss": "^8",
     "prisma": "^5.21.1",
     "tailwindcss": "^3.4.1",
