--- a/.env.example
+++ b/.env.example
@@ -9,4 +9,5 @@ AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_REGION=
 AWS_S3_BUCKET_NAME=
+NEXT_PUBLIC_URL="http://localhost:3000"
 FROM_EMAIL=hello@andino.com
