adjustment to env template

--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,11 @@
-NEXTAUTH_URL=
-NEXTAUTH_SECRET=
-CALLBACK=
-GOOGLE_CLIENT_ID=
-GOOGLE_CLIENT_SECRET=
+CALLBACK="/api/auth/google/callback"
 DATABASE_URL="postgresql://postgres:postgres@localhost/andino?schema=public"
 DIRECT_URL="postgresql://postgres:postgres@localhost/andino?schema=public"
+NEXT_PUBLIC_URL="http://localhost:3000"
+FROM_EMAIL=hello@andino.com
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_REGION=
 AWS_S3_BUCKET_NAME=
-NEXT_PUBLIC_URL="http://localhost:3000"
-FROM_EMAIL=hello@andino.com
