adjusments to the events details admin panel

--- a/.env.example
+++ b/.env.example
@@ -3,9 +3,12 @@ DATABASE_URL="postgresql://postgres:postgres@localhost/andino?schema=public"
 DIRECT_URL="postgresql://postgres:postgres@localhost/andino?schema=public"
 NEXT_PUBLIC_URL="http://localhost:3000"
 FROM_EMAIL=hello@andino.com
+# go to developer console and create a new project
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
+# go to aws and create a new user with programmatic access
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
+# this is for file storage and uploads
 AWS_REGION=
 AWS_S3_BUCKET_NAME=
