--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,7 @@ AWS_SECRET_ACCESS_KEY=
 # this is for file storage and uploads
 AWS_REGION=
 AWS_S3_BUCKET_NAME=
+# stripe keys
+NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=
+STRIPE_SECRET_KEY=
+STRIPE_WEBHOOK_SECRET=
