--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     "@react-email/render": "^1.0.1",
     "@sendgrid/client": "^8.1.3",
     "@sendgrid/mail": "^8.1.3",
+    "@stripe/connect-js": "^3.3.17",
+    "@stripe/react-connect-js": "^3.3.19",
     "@tailwindcss/typography": "^0.5.15",
     "@tanstack/react-query": "^4.0.0",
     "@trpc/client": "^10.0.0",
@@ -82,6 +84,7 @@
     "react-wrap-balancer": "^1.1.1",
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.0",
+    "stripe": "^17.3.1",
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.5.3",
     "tailwindcss-animate": "^1.0.7",
