--- a/package.json
+++ b/package.json
@@ -51,6 +51,8 @@
     "@sendgrid/mail": "^8.1.3",
     "@stripe/connect-js": "^3.3.17",
     "@stripe/react-connect-js": "^3.3.19",
+    "@stripe/react-stripe-js": "^2.9.0",
+    "@stripe/stripe-js": "^4.10.0",
     "@tailwindcss/typography": "^0.5.15",
     "@tanstack/react-query": "^4.0.0",
     "@trpc/client": "^10.0.0",
